--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
   "bugs": {
     "url": "https://github.com/masatonakatsuji2021/hachiware_sync/issues"
   },
-  "homepage": "https://github.com/masatonakatsuji2021/hachiware_sync#readme"
+  "homepage": "https://hachiware-js.com/"
 }
